<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/size_40">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_12"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_view_borders"
                    android:paddingLeft="@dimen/margin_12"
                    android:paddingRight="@dimen/margin_12"
                    android:paddingTop="@dimen/margin_8">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:textSize="@dimen/text_size" />

                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_12"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_view_borders"
                    android:paddingLeft="@dimen/margin_12"
                    android:paddingRight="@dimen/margin_12"
                    android:paddingTop="@dimen/margin_8">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_phone"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textSize="@dimen/text_size" />

                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_12"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/start_timeTxt"
                    style="@style/CustomTextLayout"
                    android:drawableEnd="@drawable/ic_arrow"
                    android:drawableRight="@drawable/ic_arrow"
                    android:gravity="center_vertical"
                    android:hint="@string/start_time"
                    android:paddingLeft="@dimen/margin_horizontal"
                    android:paddingStart="@dimen/margin_horizontal" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_12"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/start_addrTxt"
                    style="@style/CustomTextLayout"
                    android:drawableEnd="@drawable/ic_arrow"
                    android:drawableRight="@drawable/ic_arrow"
                    android:gravity="center_vertical"
                    android:hint="@string/start_point"
                    android:paddingLeft="@dimen/margin_horizontal"
                    android:paddingStart="@dimen/margin_horizontal" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_12"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/end_addr_control"
                    style="@style/CustomTextLayout"
                    android:drawableEnd="@drawable/ic_arrow"
                    android:drawableRight="@drawable/ic_arrow"
                    android:gravity="center_vertical"
                    android:hint="@string/end_point"
                    android:paddingLeft="@dimen/margin_horizontal"
                    android:paddingStart="@dimen/margin_horizontal" />

            </android.support.v7.widget.CardView>

            <!--<android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_12"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/end_addr_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_view_borders"
                    android:paddingLeft="@dimen/margin_12"
                    android:paddingRight="@dimen/margin_12"
                    android:paddingTop="@dimen/margin_8">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/end_point"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="@dimen/text_size" />

                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.CardView>
-->
            <!--  <android.support.v7.widget.CardView
                  android:id="@+id/free_view"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="@dimen/margin_12"
                  android:layout_marginRight="@dimen/margin_12"
                  android:layout_marginTop="@dimen/margin_12"
                  android:animateLayoutChanges="true"
                  android:orientation="vertical">

                  <android.support.design.widget.TextInputLayout
                      android:id="@+id/free_place_control"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@drawable/text_view_borders"
                      android:paddingLeft="@dimen/margin_12"
                      android:paddingRight="@dimen/margin_12"
                      android:paddingTop="@dimen/margin_8">

                      <android.support.design.widget.TextInputEditText
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:hint="@string/enter_available_place"
                          android:imeOptions="actionNext"
                          android:inputType="number"
                          android:maxLength="2"
                          android:maxLines="1"
                          android:textSize="@dimen/text_size" />

                  </android.support.design.widget.TextInputLayout>
              </android.support.v7.widget.CardView>-->


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_12"
                android:layout_marginRight="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_12"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/description_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_view_borders"
                    android:paddingLeft="@dimen/margin_12"
                    android:paddingRight="@dimen/margin_12"
                    android:paddingTop="@dimen/margin_8">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_descrip"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:textSize="@dimen/text_size" />

                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:text="@string/driver"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:text="@string/rider"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

     <!--       <Switch
                android:id="@+id/isDriverSw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_12"
                android:padding="@dimen/margin_8"
                android:text="@string/rider" />-->

            <Button
                android:id="@+id/sendBtn"
                style="@style/BTN"
                android:layout_marginTop="@dimen/margin_horizontal"
                android:text="@string/send" />

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>